<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/small_padding"
    android:paddingEnd="@dimen/small_padding">

    <TextView
        android:id="@+id/name_textView"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/nickname_button"
        android:layout_width="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/button_text" />

    <TextView
        android:id="@+id/nickname_text"
        android:visibility="gone"
        style="@style/NameStyle"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/star_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_marginTop"
        android:layout_marginBottom="@dimen/image_marginTop"
        android:contentDescription="@string/image_description"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="@dimen/bioText_lineSpacing"
            android:text="@string/bio_description"
            android:textSize="@dimen/bio_textSize" />
    </ScrollView>
</LinearLayout>